Revision history for Dist-Zilla-Plugin-DynamicPrereqs

{{$NEXT}}

0.019     2016-01-20 04:43:24Z
          - perl prerequisite lowered to 5.8 (Graham Ollis)

0.018     2015-12-02 03:40:03Z
          - added options '-body', '-body_from_file' as aliases for '-raw',
            '-raw_from_file'
          - *_requires subs now warn if adding a prereq that might conflict
            with one that already exists (prereq merging not yet supported)

0.017     2015-09-27 07:13:45Z
          - fix new test failure on MSWin32

0.016     2015-09-07 00:12:19Z
          - added new helper subs: requires, runtime_requires,
            build_requires, and test_requires, as sugar for updating prereqs
            in Makefile.PL
          - the -include_sub option is no longer needed: -raw clauses are also
            now searched for sub names.

0.015     2015-08-21 23:49:23Z
          - has_module($module) now returns the $VERSION of the installed
            module, or undef otherwise, if a second argument is not passed

0.014     2015-07-22 02:41:49Z
          - new '-condition' option, as sugar to provide expressions to be
            inserted into Makefile.PL (definitions of referenced subroutines
            are automatically included)

0.013     2015-05-30 19:16:03Z
          - require a new enough Module::CoreList in tests to ensure is_core()
            is available

0.012     2015-05-25 00:47:09Z
          - fix test failure with PadWalker on older perls

0.011     2015-05-23 18:27:08Z
          - warn whenever can_xs, can_cc, or can_run is used, until
            implementation concerns are resolved
          - add new sub has_module, as an alternative to can_use that does
            not load the module

0.010     2015-02-15 01:12:41Z (TRIAL RELEASE)
          - new -raw_from_file option, when content is too long to inline into
            dist.ini
          - new -include_sub option, to include definitions of commonly-used
            helper subroutines
