@@ -7,6 +7,9 @@ use Test::DZil;
 use Test::Fatal;
 use Path::Tiny;
 
+plan skip_all => 'This test is only useful for Dist::Zilla versions before 5.022'
+    if eval { require Dist::Zilla::Plugin::MakeMaker; Dist::Zilla::Plugin::MakeMaker->VERSION('5.022'); 1 };
+
 use Test::File::ShareDir
     -share => { -module => { 'Dist::Zilla::Plugin::DynamicPrereqs' => 'share/DynamicPrereqs' } };
 
